# bibleparser

./: .gitignore  README.md  bible.py  bible_chapter_verses.py  pyproject.toml
src/bibleparser/: bibleparser.py  book_chapter_verses.py
tests/: test_bible.py  test_bibleparser.py
